# VitaPad

./: .gitmodules
Client/: CMakeLists.txt
client/: CMakeLists.txt
client/src/: main.cpp  sock_data.cpp  sock_data.hpp  tray.hpp  uinput.c  uinput.h  vigem.c  vigem.h
server/src/: main.cpp
